@startuml PhysicalDataModel
'see: https://plantuml.com/fr/ie-diagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "user" {
  *id: int <<generated>>
  --
    *email: varchar
    *password: varchar
    *created_datetime: datetime
    roles: text
}

entity "avatar" {
  *id: int <<generated>>
  --
  *user_id: int <<FK>>
  name: varchar
}

entity "category" {
  *id: int <<generated>>
  --
    name: varchar
    slug: varchar
}

entity "trick" {
  *id: int <<generated>>
  --
  *category_id: int <<FK>>
  *user_id: int <<FK>>
  *created_datetime
  *name: varchar
  *slug: varchar
  *description: text
}

entity "comment" {
  *id: int <<generated>>
  --
  *trick_id: int <<FK>>
  *created_datetime
  *user_id: int <<FK>>
  *message: text
}

entity "picture" {
  *id: int <<generated>>
  --
  *trick_id: int <<FK>>
  name: varchar
}

entity "video" {
  *id: int <<generated>>
  --
  *trick_id: int <<FK>>
  url: varchar
}

user ||..o{ trick
user ||..o{ avatar

category ||..o{ trick

trick ||..o{ comment
trick ||..o{ picture
trick ||..o{ video
user ||..o{ comment

@enduml